unpackaged/main/default/objects/GT_Event__c/GT_Event__c.object-meta.xml
<CustomObject>
    <description>Object will be used to create Generic Template Account for GES Community. Main Event object for 1st Lightning Community. CC, Merck, SS, GT, Pharma Template, NNI.</description>
    <label>GES Connect Event</label>
    <nameField>
        <displayFormat>GCE-{000000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GES Connect Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>