unpackaged/main/default/objects/GT_Event__c/fields/Advertising_Art_Sent_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Art_Sent_CrownCastle__c</fullName>
    <label>Advertising Art Sent?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>