unpackaged/main/default/objects/GT_Event__c/fields/Association_Housing_Website_Log_In__c.field-meta.xml
<CustomField>
    <fullName>Association_Housing_Website_Log_In__c</fullName>
    <label>Association/Housing Website Log-In</label>
    <type>Url</type>
</CustomField>