unpackaged/main/default/objects/GT_Event__c/fields/AssociationHousing_Website_Portal_Log_In__c.field-meta.xml
<CustomField>
    <fullName>AssociationHousing_Website_Portal_Log_In__c</fullName>
    <label>Association/Housing Website Log-In</label>
    <type>Url</type>
</CustomField>