unpackaged/main/default/objects/GT_Event__c/fields/Attendees_Registered__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Registered__c</fullName>
    <label>Attendees Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>