unpackaged/main/default/objects/GT_Event__c/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACOs</fullName>
            </value>
            <value>
                <fullName>Allied Health Consumer</fullName>
            </value>
            <value>
                <fullName>ENDO</fullName>
            </value>
            <value>
                <fullName>HCPs</fullName>
            </value>
            <value>
                <fullName>HMPs</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>IDS</fullName>
            </value>
            <value>
                <fullName>IHNs</fullName>
            </value>
            <value>
                <fullName>MDs</fullName>
            </value>
            <value>
                <fullName>NPs</fullName>
            </value>
            <value>
                <fullName>PAs</fullName>
            </value>
            <value>
                <fullName>PBMs</fullName>
            </value>
            <value>
                <fullName>PCP</fullName>
            </value>
            <value>
                <fullName>PDMs</fullName>
            </value>
            <value>
                <fullName>Pharmacists</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>QMs</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Commercial Buyers</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>