unpackaged/main/default/objects/GT_Event__c/fields/Brand_Approval__c.field-meta.xml
<CustomField>
    <fullName>Brand_Approval__c</fullName>
    <label>Brand Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>