unpackaged/main/default/objects/GT_Event__c/fields/Budget_Forecast_Sent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Forecast_Sent__c</fullName>
    <label>Budget Forecast Sent</label>
    <type>Date</type>
</CustomField>