unpackaged/main/default/objects/GT_Event__c/fields/Budget_Update_Due__c.field-meta.xml
<CustomField>
    <fullName>Budget_Update_Due__c</fullName>
    <formula>IF((CASE( MOD(((Congress_Start_Date__c ) + 21) - DATE(1900, 1, 7), 7), 0, 0, 1,1, 2, 2, 3, 
3, 4, 4 , 5, 5 , 6, 6 ,7 )== 0), ((Congress_Start_Date__c ) + 19) , 
(IF((CASE( MOD(((Congress_Start_Date__c ) + 21) - DATE(1900, 1, 7), 7), 0, 0, 1,1, 2, 2, 3, 
3, 4, 4 , 5, 5 , 6, 6 ,7 )== 6), ((Congress_Start_Date__c ) + 20) , 
((Congress_Start_Date__c ) + 21))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Update Due</label>
    <type>Date</type>
</CustomField>