unpackaged/main/default/objects/GT_Event__c/fields/Collateral_Promo_Items_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Promo_Items_Shipped__c</fullName>
    <label>Collateral &amp; Promo Items Shipped?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>