unpackaged/main/default/objects/GT_Event__c/fields/Congress_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Congress_Acronym__c</fullName>
    <label>Congress Acronym</label>
    <length>30</length>
    <type>Text</type>
</CustomField>