unpackaged/main/default/objects/GT_Event__c/fields/Congress_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Congress_Cancellation_Date__c</fullName>
    <label>Congress Cancellation Date</label>
    <type>Date</type>
</CustomField>