unpackaged/main/default/objects/GT_Event__c/fields/Congress_Description__c.field-meta.xml
<CustomField>
    <fullName>Congress_Description__c</fullName>
    <label>Congress Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>