unpackaged/main/default/objects/GT_Event__c/fields/Congress_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Congress_End_Date__c</fullName>
    <label>Congress End Date</label>
    <type>Date</type>
</CustomField>