unpackaged/main/default/objects/GT_Event__c/fields/Congress_Event__c.field-meta.xml
<CustomField>
    <fullName>Congress_Event__c</fullName>
    <label>Congress Event</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>