unpackaged/main/default/objects/GT_Event__c/fields/Congress_Level__c.field-meta.xml
<CustomField>
    <fullName>Congress_Level__c</fullName>
    <label>Congress Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Priority 1</fullName>
            </value>
            <value>
                <fullName>Priority 2</fullName>
            </value>
            <value>
                <fullName>Priority 3</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>