unpackaged/main/default/objects/GT_Event__c/fields/Congress_Support__c.field-meta.xml
<CustomField>
    <fullName>Congress_Support__c</fullName>
    <label>Congress Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>