unpackaged/main/default/objects/GT_Event__c/fields/Congress_Type__c.field-meta.xml
<CustomField>
    <fullName>Congress_Type__c</fullName>
    <label>Congress Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Congress Type 1</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Congress Type 2</fullName>
            </value>
            <value>
                <fullName>Congress Type 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>