unpackaged/main/default/objects/GT_Event__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <formula>Show_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect2 Show</label>
    <type>Text</type>
</CustomField>