unpackaged/main/default/objects/GT_Event__c/fields/Cost_Center_c__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_c__c</fullName>
    <label>Cost Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>