unpackaged/main/default/objects/GT_Event__c/fields/Cost_center_for_additional_badges__c.field-meta.xml
<CustomField>
    <fullName>Cost_center_for_additional_badges__c</fullName>
    <label>Cost Center for Additional Badges</label>
    <length>30</length>
    <type>Text</type>
</CustomField>