unpackaged/main/default/objects/GT_Event__c/fields/CSI_Received__c.field-meta.xml
<CustomField>
    <fullName>CSI_Received__c</fullName>
    <label>CSI Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>