unpackaged/main/default/objects/GT_Event__c/fields/Deposit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice__c</fullName>
    <label>Deposit Invoice #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>