unpackaged/main/default/objects/GT_Event__c/fields/Deposit_Invoice_Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Date_Issued__c</fullName>
    <label>Deposit Invoice Date Issued</label>
    <type>Date</type>
</CustomField>