unpackaged/main/default/objects/GT_Event__c/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <label>Deposit Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>