unpackaged/main/default/objects/GT_Event__c/fields/Discount_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_Deadline_Date__c</fullName>
    <label>Discount Deadline Date</label>
    <type>Date</type>
</CustomField>