unpackaged/main/default/objects/GT_Event__c/fields/Dismantle_Date_Day_4__c.field-meta.xml
<CustomField>
    <fullName>Dismantle_Date_Day_4__c</fullName>
    <label>Dismantle Date - Day 4</label>
    <type>Date</type>
</CustomField>