unpackaged/main/default/objects/GT_Event__c/fields/Dismantle_Day1__c.field-meta.xml
<CustomField>
    <fullName>Dismantle_Day1__c</fullName>
    <formula>IF(AND(
ISBLANK(Dismantle_Date_Day_1__c),
 ISBLANK(Dismantle_Hours_Open_Day_1__c),
 ISBLANK(Dismantle_Hours_Close_Day_1__c) 
 ),
&quot;&quot;,
   IF(NOT(ISBLANK(Dismantle_Date_Day_1__c)),
TEXT(MONTH(Dismantle_Date_Day_1__c)) + &quot;/&quot; + TEXT(DAY(Dismantle_Date_Day_1__c)) + &quot;/&quot; +TEXT(YEAR(Dismantle_Date_Day_1__c)) + &quot; &quot;,&quot;&quot;) + 
IF(HOUR(Dismantle_Hours_Open_Day_1__c) = 0, TEXT(12), 
IF(AND(HOUR(Dismantle_Hours_Open_Day_1__c) &gt; 0, HOUR(Dismantle_Hours_Open_Day_1__c) &lt;= 12),
TEXT(HOUR(Dismantle_Hours_Open_Day_1__c)),
TEXT(HOUR(Dismantle_Hours_Open_Day_1__c) - 12))) + 
   IF(NOT(ISBLANK(Dismantle_Hours_Open_Day_1__c)),
&quot;:&quot; + LPAD(TEXT(MINUTE(Dismantle_Hours_Open_Day_1__c)), 2, &#39;0&#39;) + &quot; &quot; + IF(HOUR(Dismantle_Hours_Open_Day_1__c) &lt; 12, &quot;AM&quot;, &quot;PM&quot;),&quot;&quot;) +
   IF(NOT(ISBLANK(Dismantle_Hours_Close_Day_1__c)),
      IF(NOT(ISBLANK(Dismantle_Hours_Open_Day_1__c)),&quot; - &quot;,&quot;&quot;) + 
IF(HOUR(Dismantle_Hours_Close_Day_1__c) = 0, TEXT(12), 
IF(AND(HOUR(Dismantle_Hours_Close_Day_1__c) &gt; 0, HOUR(Dismantle_Hours_Close_Day_1__c) &lt;= 12),
TEXT(HOUR(Dismantle_Hours_Close_Day_1__c)),
TEXT(HOUR(Dismantle_Hours_Close_Day_1__c) - 12))) 
+ &quot;:&quot; + LPAD(TEXT(MINUTE(Dismantle_Hours_Close_Day_1__c)), 2, &#39;0&#39;) + &quot; &quot; + IF(HOUR(Dismantle_Hours_Close_Day_1__c) &lt; 12, &quot;AM&quot;, &quot;PM&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dismantle Day1</label>
    <type>Text</type>
</CustomField>