unpackaged/main/default/objects/GT_Event__c/fields/Dismantle_Hours_Open_Day_2__c.field-meta.xml
<CustomField>
    <fullName>Dismantle_Hours_Open_Day_2__c</fullName>
    <label>Dismantle Hours Open - Day 2</label>
    <type>Time</type>
</CustomField>