unpackaged/main/default/objects/GT_Event__c/fields/Epa3_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Epa3_Closed_Date__c</fullName>
    <label>Epa3 Closed Date</label>
    <type>Date</type>
</CustomField>