unpackaged/main/default/objects/GT_Event__c/fields/Event_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Cancellation_Date__c</fullName>
    <label>Event Cancellation Date</label>
    <type>DateTime</type>
</CustomField>