unpackaged/main/default/objects/GT_Event__c/fields/Event_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Event_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Cancelled</label>
    <type>Checkbox</type>
</CustomField>