unpackaged/main/default/objects/GT_Event__c/fields/Event_Cloned_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Cloned_Date__c</fullName>
    <label>Event Cloned Date</label>
    <type>DateTime</type>
</CustomField>