unpackaged/main/default/objects/GT_Event__c/fields/Event_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Event_Occurence__c</fullName>
    <label>Event Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Tri-Annual</fullName>
            </value>
            <value>
                <fullName>One-Time Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>