unpackaged/main/default/objects/GT_Event__c/fields/EventCloned__c.field-meta.xml
<CustomField>
    <fullName>EventCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Has Been Cloned</label>
    <type>Checkbox</type>
</CustomField>