unpackaged/main/default/objects/GT_Event__c/fields/Exhibit_Hours_Close_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hours_Close_Day_1__c</fullName>
    <label>Exhibit Hours Close - Day 1</label>
    <type>Time</type>
</CustomField>