unpackaged/main/default/objects/GT_Event__c/fields/Exhibit_Hours_Day_2__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hours_Day_2__c</fullName>
    <formula>IF(AND(
ISBLANK(Exhibit_Date_Day_2__c),
 ISBLANK(Exhibit_Hours_Open_Day_2__c),
 ISBLANK(Exhibit_Hours_Close_Day_2__c) 
 ),
&quot;&quot;,
   IF(NOT(ISBLANK(Exhibit_Date_Day_2__c)),
TEXT(MONTH(Exhibit_Date_Day_2__c)) + &quot;/&quot; + TEXT(DAY(Exhibit_Date_Day_2__c)) + &quot;/&quot; +TEXT(YEAR(Exhibit_Date_Day_2__c)) + &quot; &quot;,&quot;&quot;) + 
IF(HOUR(Exhibit_Hours_Open_Day_2__c) = 0, TEXT(12), 
IF(AND(HOUR(Exhibit_Hours_Open_Day_2__c) &gt; 0, HOUR(Exhibit_Hours_Open_Day_2__c) &lt;= 12),
TEXT(HOUR(Exhibit_Hours_Open_Day_2__c)),
TEXT(HOUR(Exhibit_Hours_Open_Day_2__c) - 12))) + 
   IF(NOT(ISBLANK(Exhibit_Hours_Open_Day_2__c)),
&quot;:&quot; + LPAD(TEXT(MINUTE(Exhibit_Hours_Open_Day_2__c)), 2, &#39;0&#39;) + &quot; &quot; + IF(HOUR(Exhibit_Hours_Open_Day_2__c) &lt; 12, &quot;AM&quot;, &quot;PM&quot;),&quot;&quot;) +
   IF(NOT(ISBLANK(Exhibit_Hours_Close_Day_2__c)),
      IF(OR(AND(ISBLANK(Exhibit_Date_Day_2__c),NOT(ISBLANK(Exhibit_Hours_Open_Day_2__c))),AND(NOT(ISBLANK(Exhibit_Date_Day_2__c)),NOT(ISBLANK(Exhibit_Hours_Open_Day_2__c)))),&quot; - &quot;,&quot;&quot;) + 
IF(HOUR(Exhibit_Hours_Close_Day_2__c) = 0, TEXT(12), 
IF(AND(HOUR(Exhibit_Hours_Close_Day_2__c) &gt; 0, HOUR(Exhibit_Hours_Close_Day_2__c) &lt;= 12),
TEXT(HOUR(Exhibit_Hours_Close_Day_2__c)),
TEXT(HOUR(Exhibit_Hours_Close_Day_2__c) - 12))) 
+ &quot;:&quot; + LPAD(TEXT(MINUTE(Exhibit_Hours_Close_Day_2__c )), 2, &#39;0&#39;) + &quot; &quot; + IF(HOUR(Exhibit_Hours_Close_Day_2__c) &lt; 12, &quot;AM&quot;, &quot;PM&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibit Hours Day 2</label>
    <type>Text</type>
</CustomField>