unpackaged/main/default/objects/GT_Event__c/fields/Exhibit_Hours_Open_Day2_Formula__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hours_Open_Day2_Formula__c</fullName>
    <formula>IF(HOUR(Exhibit_Hours_Open_Day_2__c) = 0, TEXT(12),
IF(AND(HOUR(Exhibit_Hours_Open_Day_2__c) &gt; 0, HOUR(Exhibit_Hours_Open_Day_2__c) &lt;= 12),
TEXT(HOUR(Exhibit_Hours_Open_Day_2__c)),
TEXT(HOUR(Exhibit_Hours_Open_Day_2__c) - 12))) +
IF(NOT(ISBLANK(Exhibit_Hours_Open_Day_2__c)),
&quot;:&quot; + LPAD(TEXT(MINUTE(Exhibit_Hours_Open_Day_2__c)), 2, &#39;0&#39;) + &quot; &quot; + IF(HOUR(Exhibit_Hours_Open_Day_2__c) &lt; 12, &quot;AM&quot;, &quot;PM&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibit Hours Open-Day2</label>
    <type>Text</type>
</CustomField>