unpackaged/main/default/objects/GT_Event__c/fields/Exhibit_Hours_Open_Day_3__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hours_Open_Day_3__c</fullName>
    <label>Exhibit Hours Open - Day 3</label>
    <type>Time</type>
</CustomField>