unpackaged/main/default/objects/GT_Event__c/fields/ExpressoPro__c.field-meta.xml
<CustomField>
    <fullName>ExpressoPro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExpressoPro Utilized</label>
    <type>Checkbox</type>
</CustomField>