unpackaged/main/default/objects/GT_Event__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>This field is only used as an external ID and not to be used by users</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is only used as an external ID and not to be used by users</inlineHelpText>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>