unpackaged/main/default/objects/GT_Event__c/fields/FCPA_Status__c.field-meta.xml
<CustomField>
    <fullName>FCPA_Status__c</fullName>
    <label>FCPA Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>