unpackaged/main/default/objects/GT_Event__c/fields/Final_Instructions_Sent_to_Team_Attendin__c.field-meta.xml
<CustomField>
    <fullName>Final_Instructions_Sent_to_Team_Attendin__c</fullName>
    <label>Instructions Sent to Team Attending?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>