unpackaged/main/default/objects/GT_Event__c/fields/First_Day_Freight__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Freight__c</fullName>
    <label>First Day Freight can arrive at Showsite</label>
    <type>Date</type>
</CustomField>