unpackaged/main/default/objects/GT_Event__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>John Boy</fullName>
                <default>true</default>
                <label>John Boy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>