unpackaged/main/default/objects/GT_Event__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ashley Simmons</fullName>
            </value>
            <value>
                <fullName>Jessica Wertheimer</fullName>
            </value>
            <value>
                <fullName>Laurie Miller</fullName>
            </value>
            <value>
                <fullName>Shilpa Mistry</fullName>
            </value>
            <value>
                <fullName>Tara Nigro</fullName>
            </value>
            <value>
                <fullName>Amy Gerrard</fullName>
            </value>
            <value>
                <fullName>Megan Siconolfi</fullName>
            </value>
            <value>
                <fullName>Emily Rawls</fullName>
            </value>
            <value>
                <fullName>Jessica Bodner</fullName>
            </value>
            <value>
                <fullName>Mary O&#39;Connell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>